# MA_Experiment

./: .gitmodules  README.md  ros.zsh
devel/: .catkin  _setup_util.py  env.sh  local_setup.sh  (+5 more)
itm_quadrotor_node_old/itm_nonlinear_mpc/solver_acado_resource_ethz/: CMakeLists.txt  Makefile
itm_quadrotor_node_old/itm_nonlinear_mpc/solver_acado_resource_ethz/solver/nmpc_quadrotor_solver_withexternalforce.dir/: build.make
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/: CMakeLists.txt  package.xml
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/bagfiles/: print_pkl_joblib.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/cfg/: KFDisturbanceObserver.cfg  NonLinearMPC.cfg
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/config/q300/: motor_air_200.yaml
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/include/itm_nonlinear_mpc/node/: px4_controller.hpp
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/include/itm_nonlinear_mpc/sim_only/: itm_nonlinear_aruco_mpc_offboard_node.hpp  itm_nonlinear_mpc.h  itm_nonlinear_mpc_node.h  itm_nonlinear_mpc_offboard_node.h  itm_ukf_observer.h
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/include/itm_nonlinear_mpc/utilities/: maker_publisher.hpp
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/launch/: offboard_exp_takeoff_controller.launch  px4_exp_node.launch  px4_sitl_launch.launch
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/launch/sim_only/: itm_nonlinear_aruco_offboard.launch  itm_nonlinear_mpc_sim_sitl.launch  itm_pid_sim_offboard.launch  offboard_sim_mpc_controller.launch  offboard_sim_mpc_controller_acado.launch  offboard_sim_mpc_controller_acado_q.launch  offboard_sim_mpc_controller_acados.launch  offboard_sim_mpc_controller_acados_q.launch  offboard_sim_trajectory_generator_launch.launch
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/launch/sim_only/sim_gpr/: compare_control_with_without_p.launch
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/msg/: SetMission.msg  itm_ukf_observer.msg  mpc_command_rpyt.msg
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/resources/: itm_kf_observer_sim.yaml  itm_nonlinear_mpc_sim_sitl.yaml  itm_ukf_observer_sim.yaml
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/rviz/: uav_trajectory.rviz
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/: offboard_sim_grasp_trajectory_commander.py  offboard_sim_mpc_controller.py  offboard_sim_node.py  offboard_sim_square_trajectory_commander.py  uav_core.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/acados/: quadrotor_optimizer_q_mpc_q330_set_p.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/forw_prop/: export_mission_control_set_p.py  export_mission_state_v_est_control_npy.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/forw_prop/rosbag_npy/: compare_control_with_p_npy.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/gpr/: combine_npz.py  gpr_GPyTorch_dataload_predict.py  gpr_GPyTorch_dataload_train.py  gpr_GPyTorch_predict.py  mpc_GPyTorch_predict.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/joy_control/: logitech_attitude_offboard.py  readme.md
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/ma_or_previous/: Quadrotor.py  TrajectoryGenerator.py  hovering_ground_marker.py  offboard_sim_mpc_controller_acado.py  offboard_sim_mpc_controller_acado_q.py  offboard_sim_pid_controller.py  ukf_quat_observer.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/ma_or_previous/acados/: quadrotor_model_q.py  quadrotor_optimizer.py  quadrotor_optimizer_q.py  quadrotor_q_acados_ocp.json
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/ma_or_previous/non_ros_acado/: CMakeLists.txt
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/non_ros_casadi/: casadi_struct.py  casadi_sx_v2.py  data_driven_test.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/offboard_trajectory_cmd/: offboard_circle_traj_commander.py  offboard_grasping_traj_commander.py  offboard_sim_square_trajectory_commander.py  offboard_sim_trajectory_commander.py  offboard_sim_trajectory_planner.py  offboard_simple_fixpoint_landing_test.py  offboard_simple_poly_landing_test.py  offboard_square_poly_traj_commander.py  poly_traj_gen.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/pure_gazebo_sim/: sim_kf_observer.py  sim_mpc_controller_acado.py  sim_mpc_controller_acado_q.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/scripts/traj_gen/: poly_trajectory.py  poly_trajectory_qp.py  traj_gen_base.py  traj_utils.py  uav_poly_trajectory.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/solver_acado_resource_ethz/: CMakeCache.txt  acado_envU18.sh  acado_env_mac.sh  acado_env_psf.sh  cmake_install.cmake  nmpc_acado_env.sh  nmpc_quadrotor_acado_withexternalforce.cpp
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/solver_acados/uav/: acados_sim_solver_quadrotor.c  acados_sim_solver_quadrotor.h  acados_solver_quadrotor.c  acados_solver_sfunction_quadrotor.c  main_quadrotor.c  main_sim_quadrotor.c  make_sfun_quadrotor.m  quadrotor_acados_ocp.json
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/solver_acados/uav_q/: Makefile  acados_sim_solver_quadrotor_q.c  acados_sim_solver_quadrotor_q.h  acados_solver_quadrotor_q.c  acados_solver_quadrotor_q.h  acados_solver_sfunction_quadrotor_q.c  make_sfun_quadrotor_q.m  quadrotor_q_acados_ocp.json
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/solver_ethz/: acado_solver.c  acado_uav.c  nmpc_quadrotor_solver_withexternalforce
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/solver_generator_scripts_acados/: generate_c_nmpc_acados_uav.py  generate_c_nmpc_acados_uav_q.py  nmpc_acados_uav.py  nmpc_acados_uav_q.py
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/src/node/: px4_controller.cpp
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/src/sim_only/: itm_nonlinear_aruco_mpc_offboard_node.cpp  itm_nonlinear_mpc.cpp  itm_nonlinear_mpc_node.cpp  itm_nonlinear_mpc_offboard_node.cpp  itm_nonlinear_mpc_queue.cpp  itm_pid_offboard_node.cpp  itm_simple_offboard_takeoff_landing.cpp  itm_ukf_observer.cpp
src/itm/itm_quadrotor_node/itm_nonlinear_mpc/srv/: GetControllerState.srv
src/itm/itm_ros_comm/itm_ros_comm/: package.xml
(+842 files in other folders)
