<package>
  <name>itm_ros_comm</name> <!-- Dependencies which this package needs to build itself. -->
  <version>3.3.3</version>
  <maintainer email="wei.luo@itm.uni-stuttgart.de">Wei Luo</maintainer>
  <description>Package containing messages for communicating with rotary wing MAVs</description>
  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>itm_mav_msgs</run_depend>
  <run_depend>itm_mav_srvs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>